--- a/.classpath
+++ b/.classpath
@@ -22,6 +22,7 @@
   <classpathentry kind="var" path="M2_REPO/javax/inject/javax.inject/1/javax.inject-1.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/xml/bind/jaxb-api/2.1/jaxb-api-2.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-impl/2.1.5/jaxb-impl-2.1.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-xjc/2.1.13/jaxb-xjc-2.1.13.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/jcraft/jsch/0.1.42/jsch-0.1.42.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/kitchen-eel/json-schema-validator/1.2.2/json-schema-validator-1.2.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/annotation/jsr250-api/1.0/jsr250-api-1.0.jar"/>
@@ -32,6 +33,7 @@
   <classpathentry kind="var" path="M2_REPO/org/mule/tools/devkit/mule-devkit-annotations/3.4.2/mule-devkit-annotations-3.4.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mule/modules/mule-module-apikit/1.5.1/mule-module-apikit-1.5.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mule/modules/mule-module-cors/1.2/mule-module-cors-1.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mule/modules/mule-module-reboot/3.6.0/mule-module-reboot-3.6.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/objenesis/objenesis/1.0/objenesis-1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/raml/raml-parser/0.8.10/raml-parser-0.8.10.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.7.5/slf4j-log4j12-1.7.5.jar"/>
